--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,5 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.type.descriptor.sql.BasicBinder=TRACE
+#Conexión nube aiven a la BD Techshop en MySQL
+#spring.datasource.url=jdbc:mysql://techshop-techshop-40159.i.aivencloud.com:24382/techshop
