--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,10 +14,10 @@ spring.thymeleaf.cache=false
 
 #Conexión local a la BD Techshop en MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/techshop
-
-#Usuario y clave de creaTablas.sql
-spring.datasource.username=usuario_prueba
-spring.datasource.password=Usuarlo_Clave.
+#
+##Usuario y clave de creaTablas.sql
+spring.datasource.username=root
+spring.datasource.password=root13
 
 #Driver y plataforma de comunicación
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -27,5 +27,12 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.type.descriptor.sql.BasicBinder=TRACE
-#Conexión nube aiven a la BD Techshop en MySQL
-#spring.datasource.url=jdbc:mysql://techshop-techshop-40159.i.aivencloud.com:24382/techshop
+##Conexión nube aiven a la BD Techshop en MySQL
+#spring.datasource.url=jdbc:mysql://techshop-techshopcoz.f.aivencloud.com:11010/techshop
+#spring.datasource.username=avnadmin
+#spring.datasource.password=AVNS_wm3LdadUMrVfKPwD3Mk
+#BUCKET
+firebase.bucket.name=gs://techshop-8311e.firebasestorage.app
+firebase.storage.path=techshop
+firebase.json.path=firebase
+firebase.json.file=techshop-8311e-firebase-adminsdk-fbsvc-a011424980.json
